Update Open Graph URL meta tag

--- a/index.html
+++ b/index.html
@@ -15,7 +15,8 @@
 <meta property="og:description" content="Мультифункціональний фен-стайлер 6 в 1: сушить, випрямляє, завиває. Знижка до -1000 грн!">
 <meta property="og:image" content="https://your_site_url.com/images/fen1.jpg">
 <meta property="og:type" content="website">
-<meta property="og:url" content="https://your_site_url.com">
+<meta property="og:url" content="https://aerobeauty.com.ua">
+
 
 <!-- Structured Data (SEO Google) -->
 <script type="application/ld+json">
