--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
 
 <meta name="description" content="Потужний преміальний фен-стайлер 6 в 1. Аналог Dyson: сушить, завиває, випрямляє. 1300 Вт, 6 насадок, іонізація, регулювання температури. Доставка по Україні.">
 <meta name="keywords" content="фен стайлер, фен 6 в 1, dyson аналог, фен для волосся, стайлер для укладки, фен укладка, фен для жінок, фен стайлер купити Україна">
-<link rel="canonical" href="https://your_site_url.com">
+<link rel="canonical" href="https://www.aerobeauty.com.ua">
+
 <link rel="icon" href="images/favicon.ico" type="image/x-icon">
 <!-- Open Graph -->
 <meta property="og:title" content="Фен-стайлер 6 в 1 — Преміальний стайлер для волосся">
