--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
   }
 }
 </script>
-
+<link rel="icon" href="images/favicon.ico" type="image/x-icon">
 <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600;700&display=swap" rel="stylesheet">
 
 <style>
