--- a/index.html
+++ b/index.html
@@ -8,14 +8,14 @@
 
 <meta name="description" content="Потужний преміальний фен-стайлер 6 в 1. Аналог Dyson: сушить, завиває, випрямляє. 1300 Вт, 6 насадок, іонізація, регулювання температури. Доставка по Україні.">
 <meta name="keywords" content="фен стайлер, фен 6 в 1, dyson аналог, фен для волосся, стайлер для укладки, фен укладка, фен для жінок, фен стайлер купити Україна">
-<link rel="canonical" href="https://your_site_url.com">
+<link rel="canonical" href="https://aerobeauty.com.ua">
 
 <!-- Open Graph -->
 <meta property="og:title" content="Фен-стайлер 6 в 1 — Преміальний стайлер для волосся">
 <meta property="og:description" content="Мультифункціональний фен-стайлер 6 в 1: сушить, випрямляє, завиває. Знижка до -1000 грн!">
-<meta property="og:image" content="https://your_site_url.com/images/fen1.jpg">
+<meta property="og:image" content="https://aerobeauty.com.ua/images/fen1.jpg">
 <meta property="og:type" content="website">
-<meta property="og:url" content="https://your_site_url.com">
+<meta property="og:url" content="https://aerobeauty.com.ua">
 
 <!-- Structured Data (SEO Google) -->
 <script type="application/ld+json">
