--- a/index.html
+++ b/index.html
@@ -39,7 +39,21 @@
   }
 }
 </script>
-<link rel="icon" href="images/favicon.ico" type="image/x-icon">
+<!-- Мета-тег для фавікони -->
+  <link rel="icon" href="images/favicon.ico" type="image/x-icon">
+
+  <!-- Мета-тег для мобільних пристроїв (Android) -->
+  <link rel="icon" sizes="192x192" href="images/icon-192x192.png">
+
+  <!-- Мета-тег для iOS -->
+  <link rel="apple-touch-icon" sizes="180x180" href="images/apple-icon-180x180.png">
+
+  <!-- Мета-дані Open Graph -->
+  <meta property="og:image" content="https://example.com/images/og-image.jpg">
+  
+  <!-- Додаткові мета-теги (наприклад, для пошукових систем) -->
+  <meta name="description" content="Опис вашого сайту для покращення SEO">
+  <meta name="keywords" content="теми, для, seo, сайти">
 <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600;700&display=swap" rel="stylesheet">
 
 <style>
