Update favicon and optimize mobile meta tags
Removed unnecessary meta tags and added additional optimization meta tags for mobile devices.

--- a/index.html
+++ b/index.html
@@ -39,21 +39,15 @@
   }
 }
 </script>
-<!-- Мета-тег для фавікони -->
+
+  <!-- Стандартна фавіконка -->
   <link rel="icon" href="images/favicon.ico" type="image/x-icon">
 
-  <!-- Мета-тег для мобільних пристроїв (Android) -->
-  <link rel="icon" sizes="192x192" href="images/icon-192x192.png">
+  <!-- Додаткові мета-теги для оптимізації -->
+  <meta name="theme-color" content="#ffffff"> <!-- Колір верхньої панелі для мобільних -->
+  <meta name="apple-mobile-web-app-title" content="Your Site Name"> <!-- Назва для iOS -->
 
-  <!-- Мета-тег для iOS -->
-  <link rel="apple-touch-icon" sizes="180x180" href="images/apple-icon-180x180.png">
 
-  <!-- Мета-дані Open Graph -->
-  <meta property="og:image" content="https://example.com/images/og-image.jpg">
-  
-  <!-- Додаткові мета-теги (наприклад, для пошукових систем) -->
-  <meta name="description" content="Опис вашого сайту для покращення SEO">
-  <meta name="keywords" content="теми, для, seo, сайти">
 <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600;700&display=swap" rel="stylesheet">
 
 <style>
