--- a/index.html
+++ b/index.html
@@ -16,8 +16,15 @@
 <meta property="og:image" content="https://aerobeauty.com.ua/images/fen1.jpg">
 <meta property="og:type" content="website">
 <meta property="og:url" content="https://aerobeauty.com.ua">
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=AW-11147911486"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
 
-<!-- Structured Data (SEO Google) -->
+  gtag('config', 'AW-11147911486');
+</script><!-- Structured Data (SEO Google) -->
 <script type="application/ld+json">
 {
   "@context": "https://schema.org/",
