--- a/index.html
+++ b/index.html
@@ -24,7 +24,17 @@
   gtag('js', new Date());
 
   gtag('config', 'AW-11147911486');
-</script><!-- Structured Data (SEO Google) -->
+</script>
+  <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-GPTEKP81LD"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-GPTEKP81LD');
+</script>
+  <!-- Structured Data (SEO Google) -->
 <script type="application/ld+json">
 {
   "@context": "https://schema.org/",
