--- a/index.html
+++ b/index.html
@@ -304,8 +304,8 @@ modal.addEventListener('click',e=>{ if(e.target===modal) modal.style.display='no
 // BUY BUTTON WITH TELEGRAM
 function buyProduct(){
     const text = encodeURIComponent("Хочу замовити Фен-стайлер 6 в 1 – 4000 грн");
-    const phone = "380991234567"; 
-    const url = `https://t.me/+${phone}?text=${text}`;
+    const url = `https://t.me/AeroBeauty?text=${text}`;
+
     window.open(url, '_blank');
 }
  // Відслідковуємо натискання кнопки "Купити"
