--- a/index.html
+++ b/index.html
@@ -300,12 +300,10 @@ rightArrow.addEventListener('click',()=>{
 });
 closeBtn.addEventListener('click',()=>modal.style.display='none');
 modal.addEventListener('click',e=>{ if(e.target===modal) modal.style.display='none'; });
-
-// BUY BUTTON WITH TELEGRAM
+// ПРАВИЛЬНИЙ ПЕРЕХІД У TELEGRAM
 function buyProduct(){
     const text = encodeURIComponent("Хочу замовити Фен-стайлер 6 в 1 – 4000 грн");
     const url = `https://t.me/AeroBeauty?text=${text}`;
-
     window.open(url, '_blank');
 }
  // Відслідковуємо натискання кнопки "Купити"
