--- a/index.html
+++ b/index.html
@@ -58,9 +58,8 @@
 </script>
 
   <!-- Стандартна фавіконка -->
-  <link rel="icon" href="images/favicon.ico" type="image/x-icon">
-
-  <!-- Додаткові мета-теги для оптимізації -->
+<link rel="icon" href="/favicon.ico">
+<!-- Додаткові мета-теги для оптимізації -->
   <meta name="theme-color" content="#ffffff"> <!-- Колір верхньої панелі для мобільних -->
   <meta name="apple-mobile-web-app-title" content="Your Site Name"> <!-- Назва для iOS -->
 
