--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 </script>
 
   <!-- Стандартна фавіконка -->
-<link rel="icon" href="/favicon.ico">
+<link rel="icon" href="/favicon2.ico">
 <!-- Додаткові мета-теги для оптимізації -->
   <meta name="theme-color" content="#ffffff"> <!-- Колір верхньої панелі для мобільних -->
   <meta name="apple-mobile-web-app-title" content="Your Site Name"> <!-- Назва для iOS -->
