--- a/blog.html
+++ b/blog.html
@@ -3,16 +3,21 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Вибір насадок для фен-стайлера | AeroBeauty</title>
+<title>Блог | AeroBeauty</title>
 <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600;700&display=swap" rel="stylesheet">
 <style>
-body { font-family: 'Poppins', sans-serif; margin:0; padding:0; background:#f7f7f7; color:#333; line-height:1.6; }
+body { font-family: 'Poppins', sans-serif; margin:0; padding:0; line-height:1.6; background:#f7f7f7; color:#333; }
 header, footer { background:#222; color:white; text-align:center; padding:20px; }
-.article-container { max-width:900px; margin:40px auto; background:white; padding:30px; border-radius:10px; box-shadow:0 5px 15px rgba(0,0,0,0.1); }
-h1 { color:#ff6600; margin-bottom:20px; font-size:2.2rem; }
-p { margin-bottom:15px; font-size:1.1rem; }
-a.button { display:inline-block; padding:14px 35px; background:#ff6600; color:white; border-radius:50px; font-weight:600; font-size:1.2rem; text-decoration:none; transition:0.3s; }
-a.button:hover { background:#ff8533; transform:translateY(-2px); }
+a { color:#ff6600; text-decoration:none; transition:0.3s; }
+a:hover { text-decoration:underline; }
+.blog-container { max-width:1000px; margin:40px auto; padding:0 20px; }
+h1 { color:#ff6600; text-align:center; margin-bottom:40px; font-size:2.5rem; }
+.article-card { background:white; border-radius:10px; padding:25px; margin-bottom:25px; box-shadow:0 5px 15px rgba(0,0,0,0.1); transition:0.3s; }
+.article-card:hover { transform:translateY(-3px); }
+.article-card h2 { margin-top:0; color:#333; font-size:1.8rem; }
+.article-card p { font-size:1.1rem; }
+.article-card a.button { display:inline-block; margin-top:15px; padding:12px 30px; background:#ff6600; color:white; border-radius:50px; font-weight:600; text-decoration:none; transition:0.3s; }
+.article-card a.button:hover { background:#ff8533; transform:translateY(-2px); }
 </style>
 </head>
 <body>
@@ -21,10 +26,27 @@ a.button:hover { background:#ff8533; transform:translateY(-2px); }
     <div class="logo">AeroBeauty</div>
 </header>
 
-<div class="article-container">
-    <h1>Вибір насадок для фен-стайлера</h1>
-    <p>Фен-стайлер 6 в 1 має різні насадки: концентратор для випрямлення, дифузор для об’єму та насадку для завивки. Використовуйте правильну насадку для бажаного ефекту та завжди застосовуйте термозахист.</p>
-    <a href="https://aerobeauty.com.ua" class="button">На головну сторінку / Купити</a>
+<div class="blog-container">
+    <h1>Блог</h1>
+
+    <div class="article-card">
+        <h2>Фен-стайлер як альтернатива Dyson Airwrap</h2>
+        <p>Дізнайтеся, чому фен-стайлер 6 в 1 може стати доступною та ефективною альтернативою Dyson Airwrap. Професійний результат вдома, економія часу та грошей.</p>
+        <a href="articles/analog-dyson-airwrap.html" class="button">Читати статтю</a>
+    </div>
+
+    <div class="article-card">
+        <h2>Поради для ідеальної укладки волосся фен-стайлером</h2>
+        <p>Прості поради, які допоможуть отримати професійну укладку вдома. Правильне використання насадок та температури для здорового і красивого волосся.</p>
+        <a href="articles/ukladka-volossya-fen-stayler.html" class="button">Читати статтю</a>
+    </div>
+
+    <div class="article-card">
+        <h2>Вибір насадок для фен-стайлера: що і коли використовувати</h2>
+        <p>Дізнайтеся, як правильно обирати насадки фен-стайлера 6 в 1 для випрямлення, завивки або створення об’єму. Досягайте бажаного ефекту легко та безпечно.</p>
+        <a href="articles/vybir-nasadok-fen-stayler.html" class="button">Читати статтю</a>
+    </div>
+
 </div>
 
 <footer>
