--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@ footer { padding:20px; background:#222; color:white; text-align:center; }
         <a href="#products">Товар</a>
         <a href="#reviews">Відгуки</a>
         <a href="#why-us">Чому фен-стайлер</a>
-        <a href="/articles/fen-stayler-6v1.html">Блог</a> <!-- новий пункт -->
+        <a href="#blog">Блог</a>
         <a href="#delivery">Доставка</a>
         <a href="#contact">Контакти</a>
     </nav>
