--- a/blog.html
+++ b/blog.html
@@ -32,7 +32,7 @@ h1 { color:#ff6600; text-align:center; margin-bottom:40px; font-size:2.5rem; }
     <div class="article-card">
         <h2>Фен-стайлер як альтернатива Dyson Airwrap</h2>
         <p>Дізнайтеся, чому фен-стайлер 6 в 1 може стати доступною та ефективною альтернативою Dyson Airwrap. Професійний результат вдома, економія часу та грошей.</p>
-        <a href="articles/analog-dyson-airwrap.html" class="button">Читати статтю</a>
+        <a href="articles/ analog-dyson.html" class="button">Читати статтю</a>
     </div>
 
     <div class="article-card">
