--- a/index.html
+++ b/index.html
@@ -46,18 +46,18 @@
   "@type": "Product",
   "name": "Фен-стайлер 6 в 1",
   "image": [
-    "https://your_site_url.com/images/fen1.jpg",
-    "https://your_site_url.com/images/fen2.jpg",
-    "https://your_site_url.com/images/fen3.jpg"
+    "https://aerobeauty.com.ua/images/fen1.jpg",
+    "https://aerobeauty.com.ua/images/fen2.jpg",
+    "https://aerobeauty.com.ua/images/fen3.jpg"
   ],
-  "description": "Преміальний фен-стайлер 6 в 1 з потужністю 1300 Вт, іонізацією та 6 насадками. Професійний догляд і укладка волосся вдома.",
+  "description": "Преміальний фен-стайлер 6 в 1 з потужністю 1300 Вт, іонізацією та 6 насадками.",
   "brand": "AeroBeauty",
   "offers": {
     "@type": "Offer",
     "price": "4000",
     "priceCurrency": "UAH",
     "availability": "https://schema.org/InStock",
-    "url": "https://your_site_url.com"
+    "url": "https://aerobeauty.com.ua/"
   }
 }
 </script>
