--- a/index.html
+++ b/index.html
@@ -220,7 +220,36 @@ footer { padding:20px; background:#222; color:white; text-align:center; }
 
     </div>
 </section>
+<section id="faq" style="padding:50px 20px; background:#fff;">
+    <h2 style="text-align:center; margin-bottom:20px;">Поширені запитання</h2>
 
+    <div style="max-width:800px; margin:0 auto; font-size:1.1rem; line-height:1.6;">
+        
+        <p><strong>❓ Для яких типів волосся підходить фен-стайлер?</strong><br>
+        Фен-стайлер 6 в 1 підходить для будь-якого типу волосся: тонкого, густого, хвилястого, прямого — навіть неслухняного.</p>
+
+        <p><strong>❓ Чи можна робити об'ємні локони?</strong><br>
+        Так! У комплекті є насадки, які створюють як дрібні, так і великі локони без перегріву.</p>
+
+        <p><strong>❓ Скільки насадок у комплекті?</strong><br>
+        У наборі 6 насадок: 2 для локонів, брашинг, гребінець, концентратор та насадка для сушіння.</p>
+
+        <p><strong>❓ Чи не шкодить він волоссю?</strong><br>
+        Ні. Іонізація та керамічне покриття захищають волосся від пересушування та роблять його блискучим.</p>
+
+        <p><strong>❓ Чи підходить для дуже густого волосся?</strong><br>
+        Так, потужність 1300 Вт та сильний повітряний потік забезпечують швидку укладку навіть густого волосся.</p>
+
+        <p><strong>❓ Чи можна використовувати щодня?</strong><br>
+        Можна — завдяки іонізації волосся не електризується і не пересушується.</p>
+
+        <p><strong>❓ Яка гарантія?</strong><br>
+        3 місяці офіційної гарантії від AeroBeauty.</p>
+
+        <p><strong>❓ Яка доставка?</strong><br>
+        Відправляємо Новою Поштою протягом 24 годин, оплата можлива при отриманні.</p>
+    </div>
+</section>
 <section id="delivery" class="delivery">
     <h2>Доставка та оплата</h2>
     <p>Ми пропонуємо декілька способів оплати та доставки:</p>
