--- a/index.html
+++ b/index.html
@@ -353,6 +353,78 @@ function buyProduct(){
     buyProduct();
   });
 </script>
+<script type="application/ld+json">
+{
+  "@context": "https://schema.org",
+  "@type": "FAQPage",
+  "mainEntity": [
+    {
+      "@type": "Question",
+      "name": "Для яких типів волосся підходить фен-стайлер?",
+      "acceptedAnswer": {
+        "@type": "Answer",
+        "text": "Фен-стайлер 6 в 1 підходить для тонкого, густого, хвилястого, прямого та навіть неслухняного волосся."
+      }
+    },
+    {
+      "@type": "Question",
+      "name": "Чи можна робити об'ємні локони?",
+      "acceptedAnswer": {
+        "@type": "Answer",
+        "text": "Так. У комплекті є спеціальні насадки для створення великих та дрібних локонів без перегріву."
+      }
+    },
+    {
+      "@type": "Question",
+      "name": "Скільки насадок у комплекті?",
+      "acceptedAnswer": {
+        "@type": "Answer",
+        "text": "Набір містить 6 насадок: брашинг, насадку для сушіння, концентратор, дві насадки для локонів і гребінець."
+      }
+    },
+    {
+      "@type": "Question",
+      "name": "Чи не шкодить фен-стайлер волоссю?",
+      "acceptedAnswer": {
+        "@type": "Answer",
+        "text": "Іонізація та керамічне покриття захищають волосся, зменшують пушіння та запобігають пересушуванню."
+      }
+    },
+    {
+      "@type": "Question",
+      "name": "Чи підходить фен-стайлер для густого волосся?",
+      "acceptedAnswer": {
+        "@type": "Answer",
+        "text": "Так, завдяки потужності 1300 Вт та сильному повітряному потоку пристрій легко справляється з густим волоссям."
+      }
+    },
+    {
+      "@type": "Question",
+      "name": "Чи можна використовувати фен-стайлер щодня?",
+      "acceptedAnswer": {
+        "@type": "Answer",
+        "text": "Так, можна. Іонізація мінімізує шкоду і дозволяє використовувати стайлер щодня."
+      }
+    },
+    {
+      "@type": "Question",
+      "name": "Яка гарантія на фен-стайлер?",
+      "acceptedAnswer": {
+        "@type": "Answer",
+        "text": "На фен-стайлер 6 в 1 діє офіційна гарантія 3 місяці."
+      }
+    },
+    {
+      "@type": "Question",
+      "name": "Які умови доставки?",
+      "acceptedAnswer": {
+        "@type": "Answer",
+        "text": "Доставка Новою Поштою протягом 24 годин. Оплата можлива при отриманні або на карту."
+      }
+    }
+  ]
+}
+</script>
 </body>
 </html>
 
