--- a/index.html
+++ b/index.html
@@ -3,9 +3,13 @@
 <head>
 <meta charset="UTF-8">
  <!-- Стандартна фавіконка -->
-<link rel="icon" href="https://aerobeauty.com.ua/images/favicon.ico" type="image/x-icon">
-
- <title>Фен-стайлер 6 в 1 — Преміальний стайлер для волосся | AeroBeauty</title>
+<link rel="icon" type="image/png" href="/favicon-96x96.png" sizes="96x96" />
+<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+<link rel="shortcut icon" href="/favicon.ico" />
+<link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png" />
+<link rel="manifest" href="/site.webmanifest" />
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>Фен-стайлер 6 в 1 — Преміальний стайлер для волосся | AeroBeauty</title>
 <meta name="description" content="Потужний преміальний фен-стайлер 6 в 1. Аналог Dyson: сушить, завиває, випрямляє. 1300 Вт, 6 насадок, іонізація, регулювання температури. Доставка по Україні.">
 <meta name="keywords" content="фен стайлер, фен 6 в 1, dyson аналог, фен для волосся, стайлер для укладки, фен укладка, фен для жінок, фен стайлер купити Україна">
 <link rel="canonical" href="https://aerobeauty.com.ua">
