--- a/index.html
+++ b/index.html
@@ -439,18 +439,30 @@ function changeFavicon(src) {
     link.href = src;
 }
 
-// Всі секції
-const sections = document.querySelectorAll('section');
-const observer = new IntersectionObserver(entries => {
-    entries.forEach(entry => {
-        if (entry.isIntersecting) {
-            // Змінюємо favicon, коли секція видима
-            changeFavicon('/favicon.ico');
-        }
+// Функція для визначення поточної секції
+function getCurrentSection() {
+    const sections = document.querySelectorAll('section');
+    let current = sections[0];
+    const scrollPos = window.scrollY + window.innerHeight / 3;
+    sections.forEach(section => {
+        if (section.offsetTop <= scrollPos) current = section;
     });
-}, { threshold: 0.5 }); // 50% секції у вікні
+    return current;
+}
 
-sections.forEach(section => observer.observe(section));
+// Змінюємо favicon при скролі
+window.addEventListener('scroll', () => {
+    const section = getCurrentSection();
+    // Можна змінювати різні іконки для різних секцій, зараз одна
+    changeFavicon('/favicon.ico');
+});
+
+// Змінюємо favicon при кліку на меню
+document.querySelectorAll('nav a').forEach(a => {
+    a.addEventListener('click', () => {
+        setTimeout(() => changeFavicon('/favicon.ico'), 200); // трохи часу для скролу
+    });
+});
 </script>
 </body>
 </html>
