--- a/index.html
+++ b/index.html
@@ -433,36 +433,31 @@ function changeFavicon(src) {
     let link = document.querySelector("link[rel*='icon']");
     if (!link) {
         link = document.createElement('link');
-        link.rel = 'shortcut icon';
+        link.rel = 'icon';
         document.head.appendChild(link);
     }
     link.href = src;
 }
 
-// Функція для визначення поточної секції
-function getCurrentSection() {
+// Визначаємо поточну секцію при скролі
+function updateFaviconOnScroll() {
     const sections = document.querySelectorAll('section');
-    let current = sections[0];
-    const scrollPos = window.scrollY + window.innerHeight / 3;
+    const scrollPos = window.scrollY + window.innerHeight / 2; // середина екрану
     sections.forEach(section => {
-        if (section.offsetTop <= scrollPos) current = section;
+        const top = section.offsetTop;
+        const bottom = top + section.offsetHeight;
+        if (scrollPos >= top && scrollPos < bottom) {
+            // Можна змінювати різні іконки для різних секцій
+            changeFavicon('/favicon.ico'); // або різні іконки для різних секцій
+        }
     });
-    return current;
 }
 
-// Змінюємо favicon при скролі
-window.addEventListener('scroll', () => {
-    const section = getCurrentSection();
-    // Можна змінювати різні іконки для різних секцій, зараз одна
-    changeFavicon('/favicon.ico');
-});
+// Викликаємо при скролі
+window.addEventListener('scroll', updateFaviconOnScroll);
 
-// Змінюємо favicon при кліку на меню
-document.querySelectorAll('nav a').forEach(a => {
-    a.addEventListener('click', () => {
-        setTimeout(() => changeFavicon('/favicon.ico'), 200); // трохи часу для скролу
-    });
-});
+// Викликаємо відразу при завантаженні сторінки
+window.addEventListener('load', updateFaviconOnScroll);
 </script>
 </body>
 </html>
