--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
 <link rel="icon" href="images/favicon.ico" type="image/x-icon">
 <link rel="shortcut icon" href="images/favicon.ico" type="image/x-icon">
+<link rel="apple-touch-icon" href="images/favicon.ico">
 
  <meta charset="UTF-8">
 <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png" />
