--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 <html lang="uk">
 <head>
 <!-- Favicon fix for GitHub Pages -->
-<link rel="icon" type="image/png" href="favicon2.png">
-<link rel="icon" type="image/x-icon" href="favicon2.ico">
-<link rel="apple-touch-icon" href="favicon2.png">
+<link rel="icon" href="favicon.png" type="image/png">
+<link rel="apple-touch-icon" href="favicon.png">
+<link rel="manifest" href="/site.webmanifest">
 
 <meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate" />
 <meta http-equiv="Pragma" content="no-cache" />
