--- a/index.html
+++ b/index.html
@@ -2,7 +2,8 @@
 <html lang="uk">
 <head>
 <!-- Favicon fix for GitHub Pages -->
-<link rel="icon" href="favicon1.png" type="image/png">
+<link rel="icon" type="image/png" sizes="32x32" href="favicon-32x32.png">
+
 
 <meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate" />
 <meta http-equiv="Pragma" content="no-cache" />
