--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@ footer { padding:20px; background:#222; color:white; text-align:center; }
         <div class="slide" style="background-image:url('images/fen3.jpg')" aria-label="Фен-стайлер фото 3"></div>
     </div>
     <div class="hero-content">
-        <h1>Преміальний фен-стайлер 6 в 1 для ідеальної укладки</h1>
+        <h1>Фен-стайлер 6 в 1 для ідеальної укладки</h1>
         <p>Аналог Dyson з потужним повітряним потоком, турботою про волосся та професійною укладкою.</p>
         <a href="#products" class="btn">Переглянути товар</a>
     </div>
